seoyeon version added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.temidummyapp">
 
+    <!-- 카메라 권한 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    
+    <!-- 저장소 권한 (Android 9 이하에서 사진 저장 시 필요) -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,12 +26,29 @@
         <!-- ✅ 앱의 시작 Activity 등록 -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- ✅ 사진 찍기 관련 Activity 등록 -->
+        <activity
+            android:name=".PhotoTemi"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        
+        <activity
+            android:name=".PhotoTemiFilmingActivity"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        
+        <activity
+            android:name=".PhotoTemiPictureSelectActivity"
+            android:exported="false"
+            android:screenOrientation="landscape" />
 
         <!-- ✅ Temi Skill 등록 (이 부분 추가) -->
         <meta-data
